Fixed JS error on mobile, Fixed short bio layout

--- a/assets/css/custom/styles.scss
+++ b/assets/css/custom/styles.scss
@@ -234,9 +234,9 @@ a:active{
 
 // HOME
 
- .about{
-   
-   margin: 30px 30px 0 30px;
+
+ .short-bio{
+  margin: 30px 30px 0 30px;
  }
 
 
@@ -594,6 +594,9 @@ a:active{
    font-size: 120%;
  }
 
+ .about{
+   margin: 30px;
+ }
 
 
 
@@ -775,7 +778,6 @@ a:active{
 
   
 }
-
 
 
 // ###################### FOOTER
